yeni anasayfa görseli

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>UpConstruction<span>.</span></h1>
+        <h1>Can Yapı Konut İnşaat</h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -87,11 +87,11 @@
           <div class="col-lg-7 about-img" style="background-image: url(assets/img/about.jpg);"></div>
 
           <div class="col-lg-7">
-            <h2>Consequatur eius et magnam</h2>
+            <h2>Sonuçları da büyük</h2>
             <div class="our-story">
-              <h4>Est 1988</h4>
-              <h3>Our Story</h3>
-              <p>Inventore aliquam beatae at et id alias. Ipsa dolores amet consequuntur minima quia maxime autem. Quidem id sed ratione. Tenetur provident autem in reiciendis rerum at dolor. Aliquam consectetur laudantium temporibus dicta minus dolor.</p>
+              <h4>2006'dan beri...</h4>
+              <h3>Hikayemiz</h3>
+              <p>Bursa Yenişehir İnegöl İznik ve çevre ilçelerde 17 yıldır hizmet vermekteyiz.Kaba ve ince işler, proje ve danışmanlık hizmetlerini veya anahtar teslim hizmet etmekteyiz.</p>
               <ul>
                 <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commo</span></li>
                 <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in</span></li>
