--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Can Yapı Konut İnşaat<span>.</span></h1>
+        <h1>Can Yapı Konut İnşaat</h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -83,11 +83,11 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4">
-          <div class="col-lg-6">
+          <div class="col-lg-4">
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-map"></i>
               <h3>Adresimiz</h3>
-              <p>Can Yapı İnşaat, Kurtuluş Mahallesi, İç Kapı, Atatürk Caddesi No:12 D:No:B, 16900 Yenişehir/Bursa</p>
+              <p>Can Yapı İnşaat, Kurtuluş Mahallesi Atatürk Caddesi No:12 Yenişehir/BURSA</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -95,15 +95,20 @@
             <div class="info-item d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-envelope"></i>
               <h3>Email ile ulaşın</h3>
-              <p>onder.yardimci@example.com</p>
+              <p>onder.yardimci@gmail.com</p> 
             </div>
           </div><!-- End Info Item -->
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-5 col-md-6">
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-telephone"></i>
               <h3>Bizi Arayın</h3>
-              <p>+90 555 55 55</p>
+              <h6>İşyeri Telefon : 0224 773 0847</h6>
+              <h6>İnşaat Mühendisi - Önder Yardımcı : 0539 767 9677</h6>
+              <h6>Müteahhit - Biret İlinği : 05327211352</h6>
+
+            </div>
+
             </div>
           </div><!-- End Info Item -->
 
@@ -119,17 +124,17 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row gy-4">
                 <div class="col-lg-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" name="name" class="form-control" id="name" placeholder="İsim-Soyisim" required>
                 </div>
                 <div class="col-lg-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Email Adresiniz" required>
                 </div>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Konu" required>
               </div>
               <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                <textarea class="form-control" name="message" rows="5" placeholder="Mesajınız" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
