--- a/projects.html
+++ b/projects.html
@@ -71,8 +71,8 @@
 
         <h2>Projects</h2>
         <ol>
-          <li><a href="index.html">Home</a></li>
-          <li>Projects</li>
+          <li><a href="index.html">AnaSayfa</a></li>
+          <li>Projeler</li>
         </ol>
 
       </div>
@@ -85,11 +85,15 @@
         <div class="portfolio-isotope" data-portfolio-filter="*" data-portfolio-layout="masonry" data-portfolio-sort="original-order">
 
           <ul class="portfolio-flters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-remodeling">Remodeling</li>
-            <li data-filter=".filter-construction">Construction</li>
-            <li data-filter=".filter-repairs">Repairs</li>
-            <li data-filter=".filter-design">Design</li>
+            <li data-filter="*" class="filter-active">- Mühendislik </li>
+            <li data-filter=".filter-remodeling">- Mimarlık</li>
+            <li data-filter=".filter-construction">- Müteahhitlik Danışmanlık Hizmetleri </li>
+            <li data-filter=".filter-repairs">- Anahtar Teslim Projeler</li>
+            <li data-filter=".filter-design">- Kat Karşılığı Projeler</li>
+            <li data-filter=".filter-construction">- Tadilat İşlemleri</li>
+            <li data-filter=".filter-design">- Kaba İnşaat</li>
+            <li data-filter=".filter-remodeling">- Tüm İnce İşlemler  </li>
+
           </ul><!-- End Projects Filters -->
 
           <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
