--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center">
             <h2 data-aos="fade-down"> <span>Can Yapı Konut İnşaata Hoşgeldiniz</span></h2>
-            <p data-aos="fade-up">Hayalinizdeki Evi Dilediğiniz Gibi Tasarlayalım.Ruhsat İnşaat ve Proje kısımlarını tamamlayarak evinizin anahtarını teslim Edelim</p>
+            <p data-aos="fade-up">Hayalinizdeki Evi dilediğiniz gibi tasarlayalım. Ruhsat, İnşaat ve Proje kısımlarını tamamlayarak evinizin anahtarını teslim edelim.</p>
             <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">Başlayalım</a>
           </div>
         </div>
